--- a/ckan/Dockerfile
+++ b/ckan/Dockerfile
@@ -32,7 +32,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 RUN mkdir -p /etc/ckan /var/www/storage && \
     chown -R www-data:www-data /var/www
 
+# ckan will pull in pbr. pbr in turn will upgrade pip. this is a preemptive strike
 RUN NO_PROXY=${ARG_PIP_TRUSTED_HOST} pip ${ARG_PIP_OPTS} --trusted-host ${ARG_PIP_TRUSTED_HOST} install -i ${ARG_PIP_INDEX_URL} --upgrade pip==8.1.2
+ENV PYTHON_PIP_VERSION 8.1.2
 
 # http://docs.ckan.org/en/latest/maintaining/installing/install-from-source.html
 COPY requirements.txt /etc/ckan/requirements.txt
@@ -45,6 +47,9 @@ COPY etc/ckan /etc/ckan/
 COPY etc/uwsgi /etc/uwsgi/
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 RUN curl -o /etc/ckan/default/who.ini https://raw.githubusercontent.com/ckan/ckan/ckan-2.5.2/ckan/config/who.ini
+
+#RUN apt-get update && apt-get install -y --no-install-recommends \
+#  tcpdump
 
 EXPOSE 9100 9101
 VOLUME ["/var/www/storage"]
