uwsgi paste option

--- a/ckan/etc/uwsgi/vassals/socket-9100.ini
+++ b/ckan/etc/uwsgi/vassals/socket-9100.ini
@@ -14,7 +14,7 @@ socket       = 0.0.0.0:9100
 stats        = 0.0.0.0:9101
 
 chdir        = /etc/ckan
-wsgi-file    = /etc/ckan/default/uwsgi.wsgi
+paste        = config:/etc/ckan/default/ckan.ini
 touch-reload = /etc/uwsgi/vassals/%n.ini
 static-map   = /static=static
 
