--- a/ckan/etc/ckan/default/ckan.ini
+++ b/ckan/etc/ckan/default/ckan.ini
@@ -174,6 +174,14 @@ ckan.hide_activity_from_users = %(ckan.site_id)s
 #smtp.password = your_password
 #smtp.mail_from =
 
+## Prefix middleware config
+# Ideally we wouldn't need this, but currently SCRIPT_NAME env is not being respected
+filter-with = proxy-prefix
+
+[filter:proxy-prefix]
+use = egg:PasteDeploy#prefix
+prefix = /app
+
 
 ## Logging configuration
 [loggers]
