remove crufty static-map from uwsgi

--- a/ckan/etc/uwsgi/vassals/socket-9100.ini
+++ b/ckan/etc/uwsgi/vassals/socket-9100.ini
@@ -16,7 +16,7 @@ stats        = 0.0.0.0:9101
 chdir        = /etc/ckan
 paste        = config:/etc/ckan/default/ckan.ini
 touch-reload = /etc/uwsgi/vassals/%n.ini
-static-map   = /static=static
+#static-map   = /static=static
 
 processes    = 4
 threads      = 2
