--- a/ckan/etc/ckan/default/ckan.ini
+++ b/ckan/etc/ckan/default/ckan.ini
@@ -96,7 +96,7 @@ ckan.site_id = default
 #       Add ``datapusher`` to enable DataPusher
 #		Add ``resource_proxy`` to enable resorce proxying and get around the
 #		same origin policy
-ckan.plugins = stats text_view image_view recline_view
+ckan.plugins = stats text_view image_view recline_view datastore
 
 # Define which views should be created by default
 # (plugins must be loaded in ckan.plugins)
