wip on setting up extensions

--- a/ckan/etc/ckan/requirements.txt
+++ b/ckan/etc/ckan/requirements.txt
@@ -2,6 +2,15 @@ ckanserviceprovider==0.0.5
 ckan==2.5.2
 ckanapi==3.5
 git+git://github.com/ckan/datapusher.git@0.0.8
+# local forks so we can tag them (no upstream releases)
+git+git://github.com/muccg/ckanext-pages.git@0.0.1
+git+git://github.com/muccg/ckanext-spatial.git@0.0.1
+#git+git://github.com/muccg/ckanext-scheming.git@interim-1.0.1
+#git+git://github.com/ckan/ckanext-pdfview.git@0.0.5
+#git+git://github.com/ckan/ckanext-geoview.git@v0.0.10
+#git+git://github.com/muccg/ckan-galleries.git@0.0.2
+#git+git://github.com/muccg/ckanext-hierarchy.git@0.0.1
+#git+git://github.com/muccg/ckanext-featuredviews.git@0.0.1
 uWSGI==2.0.13
 uwsgitop
 testrepository
