--- a/ckan/etc/ckan/default/ckan.ini
+++ b/ckan/etc/ckan/default/ckan.ini
@@ -96,7 +96,7 @@ ckan.site_id = default
 #       Add ``datapusher`` to enable DataPusher
 #		Add ``resource_proxy`` to enable resorce proxying and get around the
 #		same origin policy
-ckan.plugins = resource_proxy dfmp geo_view pdf_view scheming_datasets spatial_metadata spatial_query pages stats text_view image_view recline_view datastore featuredviews hierarchy_display hierarchy_form
+ckan.plugins = resource_proxy dfmp geo_view pdf_view scheming_datasets spatial_metadata spatial_query pages stats text_view image_view recline_view datastore hierarchy_display hierarchy_form
 
 #   module-path:file to schemas being used
 scheming.dataset_schemas = ckanext.spatialx:spatialx_schema.json
