--- a/ckan/etc/ckan/default/ckan.ini
+++ b/ckan/etc/ckan/default/ckan.ini
@@ -96,23 +96,9 @@ ckan.site_id = default
 #       Add ``datapusher`` to enable DataPusher
 #		Add ``resource_proxy`` to enable resorce proxying and get around the
 #		same origin policy
-ckan.plugins = resource_proxy dfmp geo_view pdf_view scheming_datasets spatial_metadata spatial_query pages stats text_view image_view recline_view datastore hierarchy_display hierarchy_form
+ckan.plugins = resource_proxy bpa_theme dfmp geo_view pdf_view scheming_datasets spatial_metadata spatial_query pages stats text_view image_view recline_view datastore hierarchy_display hierarchy_form
 
-#   module-path:file to schemas being used
-scheming.dataset_schemas = ckanext.spatialx:spatialx_schema.json
-                           ckanext.spatialx:spatialxy_schema.json
-#   will try to load "spatialx_schema.json" and "spatialxy_schema.json"
-#   as dataset schemas
-#
-#   URLs may also be used, e.g:
-#
-# scheming.dataset_schemas = http://example.com/spatialx_schema.json
-
-#   Preset files may be included as well. The default preset setting is:
-scheming.presets = ckanext.scheming:presets.json
-
-#   The is_fallback setting may be changed as well. Defaults to false:
-scheming.dataset_fallback = false
+scheming.dataset_schemas = ckanext.bpatheme:bpa_dataset.json
 
 ckan.spatial.srid = 4326
 
