--- a/ckan/etc/ckan/requirements.txt
+++ b/ckan/etc/ckan/requirements.txt
@@ -3,14 +3,16 @@ ckan==2.5.2
 ckanapi==3.5
 ckantoolkit==0.0.2
 git+git://github.com/ckan/datapusher.git@0.0.8
-# local forks so we can tag them (no upstream releases)
-git+git://github.com/muccg/ckanext-pages.git@0.0.1
-git+git://github.com/muccg/ckanext-spatial.git@0.0.1
-git+git://github.com/muccg/ckanext-scheming.git@interim-1.0.1
 git+git://github.com/ckan/ckanext-pdfview.git@0.0.5
 git+git://github.com/ckan/ckanext-geoview.git@v0.0.10
+# local forks so we can tag them (no upstream releases)
+git+git://github.com/muccg/ckanext-pages.git@0.0.2
+git+git://github.com/muccg/ckanext-spatial.git@0.0.1
+git+git://github.com/muccg/ckanext-scheming.git@interim-1.0.1
 git+git://github.com/muccg/ckan-galleries.git@0.0.2
 git+git://github.com/muccg/ckanext-hierarchy.git@0.0.1
+# unversioned while hacking on this, fixme
+git+git://github.com/muccg/ckanext-bpatheme.git
 uWSGI==2.0.13
 uwsgitop
 testrepository
