all works, barring one schema issue

--- a/ckan/etc/ckan/default/ckan.ini
+++ b/ckan/etc/ckan/default/ckan.ini
@@ -115,9 +115,9 @@ ckanext.pages.group = True
 ckan.views.default_views = image_view text_view recline_view geo_view
 
 ## Front-End Settings
-ckan.site_title = CKAN
-ckan.site_logo = /base/images/ckan-logo.png
-ckan.site_description =
+ckan.site_title = data.bioplatforms.com
+ckan.site_logo = /bpalogo.png
+ckan.site_description = Bioplatforms Australia Data Portal
 ckan.favicon = /images/icons/ckan.ico
 ckan.gravatar_default = identicon
 ckan.preview.direct = png jpg gif
