--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,11 @@ ckan:
     - WAIT_FOR_DATASTORE=1
     - WAIT_FOR_SOLR=1
     - WAIT_FOR_CACHE=1
+    - SESSION_SECRET=${SESSION_SECRET}
+    - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY}
+    - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+    - AWS_BUCKET_NAME=${AWS_BUCKET_NAME}
+    - AWS_STORAGE_PATH=composeenv
   ports:
     - 9100
     - 9101
