SCRIPT_NAME issues, run on /

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,13 @@ cache:
   image: memcached:1.4
 
 nginx:
-  image: muccg/nginx-uwsgi:1.9
+  image: muccg/nginx-uwsgi:1.10
   ports:
     - "8443:443"
     - "8080:80"
   volumes:
     - ./data/nginx:/data
+    - ./nginx/app.conf:/etc/nginx/sites-enabled/app.conf
   links:
       - ckan:uwsgi
 
