make storage path configurable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ ckan:
     - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
     - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
     - AWS_BUCKET_NAME=${AWS_BUCKET_NAME}
-    - AWS_STORAGE_PATH=composeenv
+    - AWS_STORAGE_PATH=${AWS_STORAGE_PATH}
   volumes:
     - ./data/dev:/data
   ports:
