Adding env variables for user registration form

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,12 @@ ckan:
     - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
     - AWS_BUCKET_NAME=${AWS_BUCKET_NAME}
     - AWS_STORAGE_PATH=${AWS_STORAGE_PATH}
+    - MAILGUN_API_KEY=${MAILGUN_API_KEY}
+    - MAILGUN_API_DOMAIN=${MAILGUN_API_DOMAIN}
+    - MAILGUN_SENDER_EMAIL=${MAILGUN_SENDER_EMAIL}
+    - MAILGUN_RECEIVER_EMAIL=${MAILGUN_RECEIVER_EMAIL}
+    - REGISTRATION_ERROR_LOG_FILE_PATH=${REGISTRATION_ERROR_LOG_FILE_PATH}
+    - REGISTRATION_ERROR_LOG_FILE_NAME=${REGISTRATION_ERROR_LOG_FILE_NAME}
   volumes:
     - ./data/dev:/data
   ports:
