--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,7 @@ ckan:
     - MAILGUN_RECEIVER_EMAIL=${MAILGUN_RECEIVER_EMAIL}
     - REGISTRATION_ERROR_LOG_FILE_PATH=${REGISTRATION_ERROR_LOG_FILE_PATH}
     - REGISTRATION_ERROR_LOG_FILE_NAME=${REGISTRATION_ERROR_LOG_FILE_NAME}
+    - GOOGLE_UA=${GOOGLE_UA}
   volumes:
     - ./data/dev:/data
   ports:
