Changes to add captcha env file variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,8 @@ ckan:
     - MAILGUN_RECEIVER_EMAIL=${MAILGUN_RECEIVER_EMAIL}
     - REGISTRATION_ERROR_LOG_FILE_PATH=${REGISTRATION_ERROR_LOG_FILE_PATH}
     - REGISTRATION_ERROR_LOG_FILE_NAME=${REGISTRATION_ERROR_LOG_FILE_NAME}
+    - CAPTCHA_PUBLIC_KEY=${CAPTCHA_PUBLIC_KEY}
+    - CAPTCHA_PRIVATE_KEY=${CAPTCHA_PRIVATE_KEY}
   volumes:
     - ./data/dev:/data
   ports:
