add BPAM_REGISTRATION_LOG_KEY parameter

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,7 @@ ckan:
     - GOOGLE_UA=${GOOGLE_UA}
     - CAPTCHA_PUBLIC_KEY=${CAPTCHA_PUBLIC_KEY}
     - CAPTCHA_PRIVATE_KEY=${CAPTCHA_PRIVATE_KEY}
+    - BPAM_REGISTRATION_LOG_KEY=${BPAM_REGISTRATION_LOG_KEY}
   volumes:
     - ./data/dev:/data
   ports:
