include BPAM_REGISTRATION_LOG_KEY env variable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,7 @@ ckan:
     - CAPTCHA_PUBLIC_KEY=${CAPTCHA_PUBLIC_KEY}
     - CAPTCHA_PRIVATE_KEY=${CAPTCHA_PRIVATE_KEY}
     - BPAM_REGISTRATION_LOG_KEY=${BPAM_REGISTRATION_LOG_KEY}
+    - BPAM_REGISTRATION_LOG_URL=${BPAM_REGISTRATION_LOG_URL}
   volumes:
     - ./data/dev:/data
   ports:
