--- a/nginx/sites-enabled/app.conf
+++ b/nginx/sites-enabled/app.conf
@@ -12,7 +12,7 @@ server {
   access_log            /data/localhost.access.log     combined;
   error_log             /data/localhost.error.log;
 
-  location /{
+  location / {
     root          /data/www/static;
     index         index.html;
 
@@ -25,8 +25,23 @@ server {
     uwsgi_pass    app;
   }
 
+  location /bpaotu/ {
+    root    /data/www/static
+    index   index.html;
+
+    include       /etc/nginx/uwsgi_params;
+    uwsgi_param   HTTP_SCRIPT_NAME      /;
+    uwsgi_param   SCRIPT_NAME           /;
+    uwsgi_param   HTTP_HOST             $host:8080;
+    uwsgi_param   HTTP_X_FORWARDED_HOST $host:8080;
+  }
+
+
   error_page 404  /404.html;
 }
+
+
+
 
 server {
   listen                *:443 ssl http2;
