grahame fixed it

--- a/nginx/sites-enabled/app.conf
+++ b/nginx/sites-enabled/app.conf
@@ -4,46 +4,6 @@
 #
 
 server {
-  listen                *:80;
-  server_name           localhost;
-
-  index                 index.html;
-
-  access_log            /data/localhost.access.log     combined;
-  error_log             /data/localhost.error.log;
-
-  location / {
-    root          /data/www/static;
-    index         index.html;
-
-    include       /etc/nginx/uwsgi_params;
-    uwsgi_param   HTTP_SCRIPT_NAME      /;
-    uwsgi_param   SCRIPT_NAME           /;
-    uwsgi_param   HTTP_HOST             $host:8080;
-    uwsgi_param   HTTP_X_FORWARDED_HOST $host:8080;
-
-    uwsgi_pass    app;
-  }
-
-  location /bpaotu/ {
-    root    /data/www/static
-    index   index.html;
-
-    include       /etc/nginx/uwsgi_params;
-    uwsgi_param   HTTP_SCRIPT_NAME      /;
-    uwsgi_param   SCRIPT_NAME           /;
-    uwsgi_param   HTTP_HOST             $host:8080;
-    uwsgi_param   HTTP_X_FORWARDED_HOST $host:8080;
-  }
-
-
-  error_page 404  /404.html;
-}
-
-
-
-
-server {
   listen                *:443 ssl http2;
   server_name           localhost;
 
@@ -73,6 +33,15 @@ server {
     uwsgi_param   HTTP_X_FORWARDED_HOST $host:8443;
 
     uwsgi_pass    app;
+  }
+
+  location /bpa/otu {
+    root      /data/www/bpaotu;
+    index     index.html index.htm index.php;
+    include /etc/nginx/uwsgi_params;
+    rewrite ^/bpa/otu(/.*) $1 break;
+    uwsgi_param HTTP_SCRIPT_NAME /bpa/otu;
+    uwsgi_pass bpaotu;
   }
 
   error_page 404  /404.html;
