--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,6 +89,7 @@ ckan:
     - CAPTCHA_PRIVATE_KEY=${CAPTCHA_PRIVATE_KEY}
     - BPAM_REGISTRATION_LOG_KEY=${BPAM_REGISTRATION_LOG_KEY}
     - BPAM_REGISTRATION_LOG_URL=${BPAM_REGISTRATION_LOG_URL}
+    - BPAOTU_AUTH_SECRET_KEY=${BPAOTU_AUTH_SECRET_KEY}
   volumes:
     - ./data/dev:/data
   links:
