--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,9 +46,14 @@ otudb:
   environment:
     - POSTGRES_USER=webapp
     - POSTGRES_PASSWORD=webapp
+    # - CACHE="redis://otucache:6379/1"
+    # - CACHESERVER=otucache
 
 otucache:
   image: redis:3-alpine
+  # environment:
+  #   - CACHE="redis://otucache:6379/1"
+  #   - CACHESERVER=otucache
 
 otuuwsgi:
   image: muccg/bpaotu-dev
@@ -56,11 +61,16 @@ otuuwsgi:
   volumes:
     - ./data/dev:/data
   environment:
-    - WAIT_FOR_DB=1
-    - WAIT_FOR_CACHE=1
-    - DBSERVER=otudb
-    - CACHE="redis://otucache:6379/1"
+    # - CACHE="redis://otucache:6379/1" # Temporarily comment this out as it is not being passed in properly.
+    - CKAN_CACHE_TIMEOUT=86400
     - CACHESERVER=otucache
+    # - MEMCACHE=otucache:6379
+    - DBSERVER=otudb
+    # - DBNAME=webapp
+    # - DBUSER=webapp
+    # - DBPASS=webapp
+    - WAIT_FOR_CACHE=1
+    - WAIT_FOR_DB=1
     - BPAOTU_AUTH_SECRET_KEY=${BPAOTU_AUTH_SECRET_KEY}
   links:
     - otudb
