--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ nginx:
     - ./nginx/conf.d/app.conf:/etc/nginx/conf.d/app.conf
   links:
       - ckan:uwsgi
-      - otuuwsgi:otu
+      - bpaotu
 
 datastore:
   image: mdillon/postgis:9.6
@@ -46,32 +46,23 @@ otudb:
   environment:
     - POSTGRES_USER=webapp
     - POSTGRES_PASSWORD=webapp
-    # - CACHE="redis://otucache:6379/1"
-    # - CACHESERVER=otucache
 
 otucache:
   image: redis:3-alpine
-  # environment:
-  #   - CACHE="redis://otucache:6379/1"
-  #   - CACHESERVER=otucache
 
-otuuwsgi:
+bpaotu:
   image: muccg/bpaotu-dev
   command: uwsgi_local
   volumes:
     - ./data/dev:/data
   environment:
-    # - CACHE="redis://otucache:6379/1" # Temporarily comment this out as it is not being passed in properly.
     - CKAN_CACHE_TIMEOUT=86400
-    - CACHESERVER=otucache
-    # - MEMCACHE=otucache:6379
     - DBSERVER=otudb
-    # - DBNAME=webapp
-    # - DBUSER=webapp
-    # - DBPASS=webapp
     - WAIT_FOR_CACHE=1
     - WAIT_FOR_DB=1
     - BPAOTU_AUTH_SECRET_KEY=${BPAOTU_AUTH_SECRET_KEY}
+    - CACHE="redis://otucache:6379/1"
+    - CACHESERVER=otucache
   links:
     - otudb
     - otucache
