--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,71 +1,73 @@
-cache:
-  image: memcached:1.4
+version: '2'
+services:
+    cache:
+      image: memcached:1.4
 
-nginx:
-  image: muccg/nginx-uwsgi:1.10
-  ports:
-    - "8443:443"
-    - "8080:80"
-  volumes:
-    - ./data/nginx:/data
-    - ./nginx/app.conf:/etc/nginx/sites-enabled/app.conf
-  links:
-      - ckan:uwsgi
+    nginx:
+      image: muccg/nginx-uwsgi:1.10
+      ports:
+        - "8443:443"
+        - "8080:80"
+      volumes:
+        - ./data/nginx:/data
+        - ./nginx/app.conf:/etc/nginx/sites-enabled/app.conf
+      links:
+          - ckan:uwsgi
 
-datastore:
-  image: mdillon/postgis:9.6
-  ports:
-    - 5432
-  environment:
-    - POSTGRES_USER=datastore
-    - POSTGRES_PASSWORD=datastore
+    datastore:
+      image: mdillon/postgis:9.6
+      ports:
+        - 5432
+      environment:
+        - POSTGRES_USER=datastore
+        - POSTGRES_PASSWORD=datastore
 
-db:
-  image: mdillon/postgis:9.6
-  ports:
-    - 5432
-  environment:
-    - POSTGRES_USER=ckan
-    - POSTGRES_PASSWORD=ckan
+    db:
+      image: mdillon/postgis:9.6
+      ports:
+        - 5432
+      environment:
+        - POSTGRES_USER=ckan
+        - POSTGRES_PASSWORD=ckan
 
-solr:
-  image: muccg/solr-jts:5.5
-  ports:
-      - "8983:8983"
-  volumes:
-      - ./solr/ckan:/opt/solr/server/solr/ckan
+    solr:
+      image: muccg/solr-jts:5.5
+      ports:
+          - "8983:8983"
+      volumes:
+          - ./solr/ckan:/opt/solr/server/solr/ckan
 
-datapusher:
-  image: muccg/bpa-datapusher:latest
+    datapusher:
+      image: muccg/bpa-datapusher:latest
 
-ckan:
-  build: .
-  environment:
-    - DBUSER=ckan
-    - WAIT_FOR_DB=1
-    - WAIT_FOR_DATASTORE=1
-    - WAIT_FOR_SOLR=1
-    - WAIT_FOR_CACHE=1
-    - SESSION_SECRET=${SESSION_SECRET}
-    - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-    - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-    - AWS_BUCKET_NAME=${AWS_BUCKET_NAME}
-    - AWS_STORAGE_PATH=${AWS_STORAGE_PATH}
-    - MAILGUN_API_KEY=${MAILGUN_API_KEY}
-    - MAILGUN_API_DOMAIN=${MAILGUN_API_DOMAIN}
-    - MAILGUN_SENDER_EMAIL=${MAILGUN_SENDER_EMAIL}
-    - MAILGUN_RECEIVER_EMAIL=${MAILGUN_RECEIVER_EMAIL}
-    - REGISTRATION_ERROR_LOG_FILE_PATH=${REGISTRATION_ERROR_LOG_FILE_PATH}
-    - REGISTRATION_ERROR_LOG_FILE_NAME=${REGISTRATION_ERROR_LOG_FILE_NAME}
-    - GOOGLE_UA=${GOOGLE_UA}
-  volumes:
-    - ./data/dev:/data
-  ports:
-    - 9100
-    - 9101
-  links:
-    - db
-    - datastore
-    - solr
-    - cache
-#    - datapusher
+    ckan:
+      build: .
+      environment:
+        - DBUSER=ckan
+        - WAIT_FOR_DB=1
+        - WAIT_FOR_DATASTORE=1
+        - WAIT_FOR_SOLR=1
+        - WAIT_FOR_CACHE=1
+        - SESSION_SECRET=${SESSION_SECRET}
+        - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+        - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+        - AWS_BUCKET_NAME=${AWS_BUCKET_NAME}
+        - AWS_STORAGE_PATH=${AWS_STORAGE_PATH}
+        - MAILGUN_API_KEY=${MAILGUN_API_KEY}
+        - MAILGUN_API_DOMAIN=${MAILGUN_API_DOMAIN}
+        - MAILGUN_SENDER_EMAIL=${MAILGUN_SENDER_EMAIL}
+        - MAILGUN_RECEIVER_EMAIL=${MAILGUN_RECEIVER_EMAIL}
+        - REGISTRATION_ERROR_LOG_FILE_PATH=${REGISTRATION_ERROR_LOG_FILE_PATH}
+        - REGISTRATION_ERROR_LOG_FILE_NAME=${REGISTRATION_ERROR_LOG_FILE_NAME}
+        - GOOGLE_UA=${GOOGLE_UA}
+      volumes:
+        - ./data/dev:/data
+      ports:
+        - 9100
+        - 9101
+      links:
+        - db
+        - datastore
+        - solr
+        - cache
+    #    - datapusher
