--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,37 @@
-version: '2'
+version: "2"
 services:
-    cache:
-      image: memcached:1.4
+  cache:
+    image: memcached:1.4
 
-    nginx:
-      image: muccg/nginx-uwsgi:1.10
-      ports:
-        - "8443:443"
-        - "8080:80"
-      volumes:
-        - ./data/nginx:/data
-        - ./nginx/app.conf:/etc/nginx/sites-enabled/app.conf
-      links:
-          - ckan:uwsgi
+  redis:
+    image: redis:latest
 
-    datastore:
-      image: mdillon/postgis:9.6
-      ports:
-        - 5432
-      environment:
-        - POSTGRES_USER=datastore
-        - POSTGRES_PASSWORD=datastore
+  nginx:
+    image: muccg/nginx-uwsgi:1.10
+    ports:
+      - "8443:443"
+      - "8080:80"
+    volumes:
+      - ./data/nginx:/data
+      - ./nginx/app.conf:/etc/nginx/sites-enabled/app.conf
+    links:
+      - ckan:uwsgi
 
-    db:
-      image: mdillon/postgis:9.6
-      ports:
-        - 5432
-      environment:
-        - POSTGRES_USER=ckan
-        - POSTGRES_PASSWORD=ckan
+  datastore:
+    image: mdillon/postgis:9.6
+    ports:
+      - 5432
+    environment:
+      - POSTGRES_USER=datastore
+      - POSTGRES_PASSWORD=datastore
+
+  db:
+    image: mdillon/postgis:9.6
+    ports:
+      - 5432
+    environment:
+      - POSTGRES_USER=ckan
+      - POSTGRES_PASSWORD=ckan
 
   solr:
     image: muccg/solr-jts:5.5
@@ -65,6 +68,7 @@ services:
       - GOOGLE_UA=${GOOGLE_UA}
       - LOCAL_CKAN_API_URL=${LOCAL_CKAN_API_URL}
       - CKAN_API_KEY=${CKAN_API_KEY}
+      - CKAN_REDIS_URL=redis://redis:6379/1
     volumes:
       - ./data/dev:/data
     ports:
@@ -75,4 +79,5 @@ services:
       - datastore
       - solr
       - cache
+      - redis
   #    - datapusher
