--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -4,31 +4,6 @@
 #
 
 server {
-  listen                *:80;
-  server_name           localhost;
-
-  index                 index.html;
-
-  access_log            /data/localhost.access.log     combined;
-  error_log             /data/localhost.error.log;
-
-  location /{
-    root          /data/www/static;
-    index         index.html;
-
-    include       /etc/nginx/uwsgi_params;
-    uwsgi_param   HTTP_SCRIPT_NAME      /;
-    uwsgi_param   SCRIPT_NAME           /;
-    uwsgi_param   HTTP_HOST             $host:8080;
-    uwsgi_param   HTTP_X_FORWARDED_HOST $host:8080;
-
-    uwsgi_pass    app;
-  }
-
-  error_page 404  /404.html;
-}
-
-server {
   listen                *:443 ssl http2;
   server_name           localhost;
 
@@ -52,10 +27,11 @@ server {
     index         index.html;
 
     include       /etc/nginx/uwsgi_params;
-    uwsgi_param   HTTP_SCRIPT_NAME      /;
-    uwsgi_param   SCRIPT_NAME           /;
     uwsgi_param   HTTP_HOST             $host:8443;
     uwsgi_param   HTTP_X_FORWARDED_HOST $host:8443;
+    uwsgi_param   HTTP_SCRIPT_NAME      '';
+    uwsgi_param   SCRIPT_NAME           '';
+
 
     uwsgi_pass    app;
   }
