new local dev setup with local submodules; no more `docker cp`

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,6 +91,8 @@ ckan:
     - BPAOTU_AUTH_SECRET_KEY=${BPAOTU_AUTH_SECRET_KEY}
   volumes:
     - ./data/dev:/data
+    - .:/app
+    - ./docker-entrypoint.sh:/docker-entrypoint.sh
   links:
     - db
     - datastore
