add s3filestore to locally installed modules

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "ckanext-bulk"]
 	path = ckanext-bulk
 	url = ssh://github.com/BioplatformsAustralia/ckanext-bulk.git
+[submodule "ckanext-s3filestore"]
+	path = ckanext-s3filestore
+	url = ssh://github.com/BioplatformsAustralia/ckanext-s3filestore.git
