--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "ckanext-scheming"]
 	path = ckanext-scheming
 	turl = ssh://github.com/BioplatformsAustralia/ckanext-scheming.git
+[submodule "ckanext-spatial"]
+	path = ckanext-spatial
+	url = https://github.com/BioplatformsAustralia/ckanext-spatial.git
