--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "ckanext-spatial"]
 	path = ckanext-spatial
 	url = https://github.com/BioplatformsAustralia/ckanext-spatial.git
+[submodule "docker-bpa-ckan"]
+	path = docker-bpa-ckan
+	url = ssh://github.com/BioplatformsAustralia/docker-bpa-ckan
