pass through some extra env variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,9 @@ ckan:
     - CAPTCHA_PUBLIC_KEY=${CAPTCHA_PUBLIC_KEY}
     - CAPTCHA_PRIVATE_KEY=${CAPTCHA_PRIVATE_KEY}
     - BPAOTU_AUTH_SECRET_KEY=${BPAOTU_AUTH_SECRET_KEY}
+    - LOCAL_CKAN_API_URL=${LOCAL_CKAN_API_URL}
+    - CKAN_API_KEY=${CKAN_API_KEY}
+    - CKAN_PREFIX=${CKAN_PREFIX}
   volumes:
     - ./data/dev:/data
     - .:/app
