--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,8 @@ ckan:
     - WAIT_FOR_CACHE=1
     - SESSION_SECRET=${SESSION_SECRET}
     - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+    - AWS_HOST_NAME_TO_S3=${AWS_HOST_NAME_TO_S3}
+    - AWS_REGION_NAME=${AWS_REGION_NAME}
     - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
     - AWS_BUCKET_NAME=${AWS_BUCKET_NAME}
     - AWS_STORAGE_PATH=${AWS_STORAGE_PATH}
@@ -59,7 +61,6 @@ ckan:
     - BPAOTU_AUTH_SECRET_KEY=${BPAOTU_AUTH_SECRET_KEY}
     - LOCAL_CKAN_API_URL=${LOCAL_CKAN_API_URL}
     - CKAN_API_KEY=${CKAN_API_KEY}
-    - CKAN_PREFIX=${CKAN_PREFIX}
   volumes:
     - ./data/dev:/data
     - .:/app
