--- a/nginx/sites-enabled/app.conf
+++ b/nginx/sites-enabled/app.conf
@@ -27,8 +27,8 @@ server {
     index         index.html;
 
     include       /etc/nginx/uwsgi_params;
-    uwsgi_param   HTTP_SCRIPT_NAME      /;
-    uwsgi_param   SCRIPT_NAME           /;
+    uwsgi_param   HTTP_SCRIPT_NAME      "";
+    uwsgi_param   SCRIPT_NAME           "";
     uwsgi_param   HTTP_HOST             $host:8443;
     uwsgi_param   HTTP_X_FORWARDED_HOST $host:8443;
 
